rulex-lib/tests/testcases/errors/2.txt
#! expect=error
~~~~~~~~
-----
ERROR: Unknown token
SPAN: 0..1